<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ctlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/prm_white"
    android:paddingTop="@dimen/prm_18sdp">

    <include
        android:id="@+id/shimmer_provider"
        layout="@layout/prm_shimmer_my_promotion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/prm_view_size_15"
        android:layout_marginTop="@dimen/prm_42sdp"
        android:layout_marginEnd="@dimen/prm_view_size_15"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.ttcn.prm.ui.widget.PRMImageView
        android:id="@+id/btnBack"
        android:layout_width="@dimen/prm_24sdp"
        android:layout_height="@dimen/prm_24sdp"
        android:layout_marginStart="@dimen/prm_6sdp"
        android:layout_marginTop="@dimen/prm_14sdp"
        android:padding="@dimen/prm_6sdp"
        android:tint="@color/prm_color_222_cep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/prm_ic_back" />

    <com.ttcn.prm.ui.widget.PRMTextView
        android:id="@+id/tvEndow"
        style="@style/PRMFontBold16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prm_choose_endow"
        android:textColor="@color/prm_color_222_cep"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnBack" />

    <LinearLayout
        android:id="@+id/lnEdtVoucher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/prm_9sdp"
        android:background="@color/prm_color_FBFBFB"
        android:paddingHorizontal="@dimen/prm_15sdp"
        android:paddingTop="@dimen/prm_10sdp"
        android:paddingBottom="@dimen/prm_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEndow">

        <com.ttcn.prm.ui.widget.PRMSearchField
            android:id="@+id/edtVoucher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prmSfAllowVietnamese="true"
            app:prmSfHint="Vui lòng nhập mã ưu đãi" />

    </LinearLayout>

    <!--
        Kéo-để-tải-lại. Ràng buộc bố cục chuyển hết lên SwipeRefreshLayout; RecyclerView bên
        trong đổi sang match_parent vì nó không còn là con của ConstraintLayout nữa.
        Cùng cách làm với prm_fragment_my_promotion.xml (swipeRefreshLayout + homeList).
    -->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshVoucher"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/ctl_apply_voucher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lnEdtVoucher">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvVoucher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/prm_color_f4f4f4"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/prm_item_choose_promotion" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <!--
        Tìm không ra kết quả — cùng bố cục/chuỗi với màn "Tìm ưu đãi"
        (prm_fragment_search_my_promotion.xml: ctlNoResult). Sửa bên nào thì sửa cả bên kia.
    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctlNoResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/prm_view_size_120"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnEdtVoucher">

        <com.ttcn.prm.ui.widget.PRMImageView
            android:id="@+id/imgNoData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/prm_il_chua_co_giao_dich_mau"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.ttcn.prm.ui.widget.PRMTextView
            android:id="@+id/tvNoResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/prm_view_size_40"
            android:layout_marginTop="@dimen/prm_view_size_10"
            android:layout_marginEnd="@dimen/prm_view_size_40"
            android:fontFamily="@font/prm_sf_pro_display_bold"
            android:gravity="center"
            android:lineHeight="@dimen/prm_view_size_22"
            android:text="@string/prm_search_no_result"
            android:textColor="@color/prm_black"
            android:textSize="@dimen/prm_text_size_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgNoData" />

        <com.ttcn.prm.ui.widget.PRMTextView
            android:id="@+id/tvNoResultSubtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/prm_view_size_40"
            android:layout_marginTop="@dimen/prm_view_size_50"
            android:layout_marginEnd="@dimen/prm_view_size_40"
            android:fontFamily="@font/prm_sf_pro_display_regular"
            android:gravity="center"
            android:lineHeight="@dimen/prm_view_size_22"
            android:text="@string/prm_discover_voucher"
            android:textSize="@dimen/prm_text_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgNoData" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/ctl_apply_voucher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/prm_white"
        app:cardElevation="@dimen/prm_3sdp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/prm_12sdp"
            android:paddingTop="@dimen/prm_12sdp">

            <com.ttcn.prm.ui.widget.PRMTextView
                android:id="@+id/txtNumberChooseEndow"
                style="@style/PRMFontRegular16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/prm_color_7A7A7A"
                app:layout_constraintBottom_toBottomOf="@id/txtReducedPrice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/txtReducedPrice"
                tools:text="Đã chọn 4 voucher" />

            <com.ttcn.prm.ui.widget.PRMTextView
                android:id="@+id/txtReducedPrice"
                style="@style/PRMFontSfDisplayBold18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/prm_8sdp"
                android:textColor="@color/prm_color_222_cep"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btnApply"
                android:layout_marginBottom="@dimen/prm_8sdp"
                tools:text="-50.000đ" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/layoutReducePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="txtNumberChooseEndow, txtReducedPrice" />

            <com.ttcn.prm.ui.widget.PRMButton
                android:id="@+id/btnApply"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:prmBtSize="large"
                app:prmBtText="Áp dụng" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
